fix: seed.ts
